# robrix

./: .gitignore  .mcp.json  .typos.toml  AGENTS.md  Cargo.toml  LICENSE-MIT  License Attributions.md  README.md  SPLASH.md  about.hbs  about.md.hbs  about.toml  build.rs  fmt_diff.txt  login.toml  patch.diff  patch1.diff  rust-toolchain.toml  rustfmt.toml  test-room-settings.sh  test.txt  typos.toml
.Jules/: palette.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json  statusline.mjs  statusline.sh
.claude-flow/: .gitignore  CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: README.md  adr-compliance.sh  auto-commit.sh  daemon-manager.sh  ddd-tracker.sh  guidance-hook.sh  guidance-hooks.sh  health-monitor.sh  learning-hooks.sh  learning-optimizer.sh  learning-service.mjs  metrics-db.mjs  pattern-consolidator.sh  perf-worker.sh  security-scanner.sh  standard-checkpoint-hooks.sh  statusline.cjs  swarm-comms.sh  swarm-hooks.sh  swarm-monitor.sh  sync-v3-metrics.sh  update-v3-progress.sh  v3-quick-status.sh  v3.sh  validate-v3-config.sh  worker-manager.sh
.claude/hooks/: user-prompt-submit.sh
.github/: typos.toml
.github/workflows/: build.yml  builds.yml  licenses.yml  login-toml.yaml  main.yml  release.yml  robrix-build.yml
.jules/: bolt.md  sentinel.md
.swarm/: memory.db  schema.sql  state.json
docs/: README.md  agent-chat-feature-flag.md
docs/plans/: add-tillandsia-features.md
docs/robrix-with-agentchat/: README.md
docs/robrix-with-hermes/: 01-deploying-hermes-with-matrix-zh.md  01-deploying-hermes-with-matrix.md
issues/: 001-dock-load-state-drawlist-corruption.md  009-dm-routing-ignores-membership.md  009-mobile-appservice-binding-not-persisted.md  011-upstream-bot-test-failures.md
licenses/: ATTRIBUTIONS.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY-NOTICES.html
licenses/config/: about.md.hbs  about.toml
packaging/: Entitlements.plist  Info.plist  OtherEntitlements.txt  build-macos-dmg.sh  fix-dmg-applications-icon.sh  robrix.desktop
packaging/before-packaging-command/: .gitignore
resources/android/: AndroidManifest.xml.template
resources/i18n/: en.json  zh-CN.json
roadmap/agentchat-demo/: CHECKLIST.md  README.md  add-team.sh  agent-chat.env.demo  common.sh  down-team.sh  link-skill.sh  nudge.sh  preflight.sh  projects-registry.mjs  register-accounts.mjs  start-demo.sh  start-infra.sh  workflow-board.mjs
specs/: task-copy-access-token.spec.md  task-dm-joined-room-details-churn.spec.md  task-dm-routing-membership-filter.spec.md  task-fix-mobile-appservice-persistence.spec.md  task-mobile-lifecycle.spec.md  task-proxy-policy.spec.md  task-register-flow.spec.md  task-restore-session-error-policy.spec.md
specs/month-1/: encryption-indicator.spec.md  forward-messages.spec.md
specs/month-4/: task-room-settings-panel.spec.md
specs/month-6/: fuzzy-pinyin-matcher.spec.md  search.md
src/: account_manager.rs  api.rs  app.rs  audio_player.rs  avatar_cache.rs  card_cache.rs  cpu_worker.rs  event_preview.rs  event_preview.rs.orig  homeserver.rs  i18n.rs  image_utils.rs  image_viewer.rs  image_viewer_modal.rs  index.html  join_leave_room_modal.rs  lib.rs  link_preview_cache.rs  location.rs  main.rs  matrix.rs  media_cache.rs  message_display.rs  offline_sync.rs  persistent_state.rs  popup_notification.rs  proxy_config.rs  room_preview_cache.rs  scheduler.rs  search_structure.rs  serialization.rs  sliding_sync.rs  sliding_sync.rs.orig  space_service_sync.rs  temp_storage.rs  updater.rs  utils.rs  verification.rs  verification_modal.rs
src/audio/: audio_controller.rs  audio_message_ui.rs  audio_playback_window.rs  mod.rs
src/contacts/: add_contact_screen.rs  contact_info.rs  contacts_group.rs  contacts_list.rs  contacts_screen.rs  mod.rs
src/discover/: discover_screen.rs  mod.rs  moment_list.rs  moments_screen.rs
src/home/: add_room.rs  app_service_panel.rs  bot_binding_modal.rs  chat_screen.rs  create_bot_modal.rs  create_room.rs  create_space_room_modal.rs  delete_bot_modal.rs  directory_screen.rs  edited_indicator.rs  editing_pane.rs  emoji.rs  encryption_notice.rs  event_group.rs  event_reaction.rs  event_reaction_list.rs  event_source_modal.rs  global_message_search.rs  home_screen.rs  invite_modal.rs  invite_screen.rs  light_themed_dock.rs  link_preview.rs  loading_modal.rs  loading_pane.rs  location_preview.rs  main_content.rs  main_desktop_ui.rs  main_mobile_ui.rs  membership_transitions.rs  message_context_menu.rs  message_source_modal.rs  mod.rs  navigation_tab_bar.rs  new_message_context_menu.rs  room_action_bar.rs  room_context_menu.rs  room_image_message_detail.rs  room_image_viewer.rs  room_image_viewer_detail.rs  (+29 more)
src/login/: login_screen.rs  login_status_modal.rs  logout_confirm_modal.rs  logout_errors.rs  logout_state_machine.rs  mod.rs  oidc_login.rs  register_screen.rs
src/logout/: logout_confirm_modal.rs  logout_errors.rs  logout_state_machine.rs  mod.rs
src/persistence/: app_state.rs  matrix_state.rs  mod.rs  tsp_state.rs  utils.rs
src/profile/: mod.rs  my_profile_screen.rs  profile_screen.rs  user_profile.rs  user_profile_cache.rs
src/register/: mod.rs  register_screen.rs  register_status_modal.rs  uiaa.rs  validation.rs
src/right_drawer/: mod.rs
src/right_panel/: mod.rs  right_panel.rs  search_message.rs
src/room/: can_not_preview_screen.rs  link_preview_card.rs  loading_screen.rs  member_search.rs  mod.rs  preview_screen.rs  reply_preview.rs  room_details.rs  room_display_filter.rs  room_events_group.rs  room_info_pane.rs  room_input_bar.rs  room_member_manager.rs  room_members_cache.rs  room_members_pane.rs  typing_notice.rs
src/setting/: account_page.rs  keyboard_page.rs  mod.rs  notification_page.rs  router.rs  setting_page.rs  side_bar.rs
src/settings/: about_settings.rs  account_settings.rs  app_preferences.rs  app_settings.rs  app_settings_data.rs  bot_settings.rs  devices_settings.rs  mod.rs  settings_screen.rs  translation_settings.rs  (+3 more)
(+142 files in other folders)
